dev/monitoring/prometheus-dashboard/prometheus-ingressroute-tls.yaml
apiVersion: traefik.containo.us/v1alpha1
kind: IngressRoute
metadata:
  name: prometheus
  namespace: monitoring
spec:
  entryPoints:
    - websecure
  routes:
  - match: Host(`prometheus.imroc.io`)
    kind: Rule
    middlewares:
    - name: monitoring-auth
    services:
    - name: prometheus-k8s
      port: 9090
  tls:
    secretName: prometheus-imroc-io-tls
