dev/monitoring/prometheus-dashboard/prometheus-ingressroute.yaml
apiVersion: traefik.containo.us/v1alpha1
kind: IngressRoute
metadata:
  name: prometheus-http
  namespace: monitoring
spec:
  entryPoints:
    - web
  routes:
  - match: Host(`prometheus.imroc.io`)
    kind: Rule
    middlewares:
    - name: https-redirect
    - name: monitoring-auth
    services:
    - name: prometheus-k8s
      port: 9090
